# mmm

./: .rustfmt.toml  Cargo.toml  README.md
.github/: .editorconfig  dependabot.yml
.github/workflows/: ci.yaml
core/: Cargo.toml
core/src/: file_tree.rs  lib.rs  mods.rs  util.rs
core/src/file_tree/: display.rs  mod.rs  node.rs  util.rs
core/src/instance/: data.rs  mod.rs
deploy/: Cargo.toml
deploy/src/: caps.rs  instance.rs  main.rs  mount.rs  namespace.rs  staging.rs
edit/: Cargo.toml
edit/src/: file_tree.rs  instance.rs  lib.rs  mod.rs  util.rs  writer.rs
edit/src/archive/: mod.rs  rar.rs  seven_zip.rs  tar.rs  zip.rs
edit/src/install/: mod.rs  staging.rs
edit/src/mod/: staging.rs
gui/: Cargo.toml
gui/src/: background_task.rs  details.rs  install.rs  main.rs  tree.rs  utils.rs
gui/src/install/: mod.rs
src/: caps.rs  main.rs  mods.rs  mount.rs  staging.rs
