[workspace]
resolver = "3"
members = [
    "core",
    "deploy",
]

[workspace.dependencies]
cbor4ii = { version = "1.2", features = ["serde1", "use_std"] }
compact_str = { version = "0.9", features = ["serde"] }
ptree = { version = "0.5", default-features = false, features = ["ansi"] }
thiserror = "2"
typed-index-collections = { version = "3.5", features = ["serde"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
if_not_else = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "deny"
uninlined_format_args = "allow"
