[workspace]
resolver = "3"
members = [
    "core",
    "deploy",
    "edit",
    "gui",
]

[workspace.dependencies]
anyhow = "1"
cbor4ii = { version = "1.2", features = ["serde1", "use_std"] }
clap = { version = "4.5", features = ["derive"] }
compact_str = { version = "0.9", features = ["serde"] }
ptree = { version = "0.5", default-features = false, features = ["ansi"] }
thiserror = "2"
tracing = "0.1"
typed-index-collections = { version = "3.5", features = ["serde"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
if_not_else = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "deny"
uninlined_format_args = "allow"
