[workspace]
resolver = "3"
members = [
    "core",
    "deploy",
    "edit",
    "gui",
]

[workspace.dependencies]
anyhow = "1"
camino = "1.2"
cbor4ii = { version = "1.2", features = ["serde1", "use_std"] }
clap = { version = "4.6", features = ["derive"] }
compact_str = { version = "0.9", features = ["serde"] }
foldhash = "0.2"
nary_tree = { git = "https://github.com/MonterraByte/nary-tree", rev = "0ee83bb2b144f9ef72fa8a35941e611f5c63e3f7", features = ["iter_mut"] }
ptree = { version = "0.5", default-features = false, features = ["ansi"] }
replace_with = "0.1"
tempfile = "3.27"
thiserror = "2"
tracing = "0.1"
typed-index-collections = { version = "3.5", features = ["serde"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
if_not_else = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_field_names = "allow" # https://github.com/rust-lang/rust-clippy/issues/13857
too_many_lines = "allow"
undocumented_unsafe_blocks = "deny"
uninlined_format_args = "allow"
