[package]
name = "mmm-core"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
compact_str = "0.9"
itertools = "0.14"
ptree = { workspace = true }
nary_tree = "0.4"
serde_json = "1"
smallvec = { version = "1.15", features = ["union"] }
thiserror = { workspace = true }

[lints]
workspace = true
