[package]
name = "mmm-core"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
cbor4ii = { workspace = true }
compact_str = { workspace = true }
const_format = { version = "0.2" }
itertools = "0.14"
ptree = { workspace = true }
nary_tree = "0.4"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1.15", features = ["union"] }
thiserror = { workspace = true }
typed-index-collections = { workspace = true }

[lints]
workspace = true
