[package]
name = "mmm-gui"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "mmm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
mmm-core = { path = "../core" }
mmm-edit = { path = "../edit" }
eframe = "0.33"
egui_extras = "0.33"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
